Consumes & webapp seperation.
* Split out web app into routes (trips and posts) and config
* Added sinatra console (how to `include Travel` from command line?)
* First parts of elasticsearch
